--- a/Day2HW-Whocall/whoscall.html
+++ b/Day2HW-Whocall/whoscall.html
@@ -13,6 +13,7 @@
         }
         .wrap{
             width: 960px;
+            margin: auto;
         }
         .wrap .navbar{
             width: 100%;
