update img route

--- a/Day2HW-Whocall/whoscall.html
+++ b/Day2HW-Whocall/whoscall.html
@@ -326,7 +326,7 @@
     <div class="wrap">
         <div class="navbar">
             <a href="#" class="logo">
-                <img src="/HomeWork/Day2作業/whoscall網站圖片檔/asset 6.svg" alt="whoscalllogo">
+                <img src="/Day2HW-Whocall/whoscallimg/asset 6.svg" alt="whoscalllogo">
             </a>
             <div class="list">
                 <ul>
@@ -342,9 +342,9 @@
             </div>
         </div>
         <div class="banner">
-            <img src="/HomeWork/Day2作業/whoscall網站圖片檔/valid-number-1440.jpg" alt="">
-            <img class="decoration-big" src="/HomeWork/Day2作業/whoscall網站圖片檔/asset 7.svg" alt="banner裝飾大">
-            <img class="decoration-small" src="/HomeWork/Day2作業/whoscall網站圖片檔/asset 8.svg" alt="banner裝飾小">
+            <img src="/Day2HW-Whocall/whoscallimg/valid-number-1440.jpg" alt="">
+            <img class="decoration-big" src="/Day2HW-Whocall/whoscallimg/asset 7.svg" alt="banner裝飾大">
+            <img class="decoration-small" src="/Day2HW-Whocall/whoscallimg/asset 8.svg" alt="banner裝飾小">
             <div class="banner-txt">
                 <h1>whoscall 認證號碼</h1>
                 <p>電話接通前<br>讓專業形象為你開場!</p>
@@ -365,7 +365,7 @@
                     <p class="market-survey-text">※Whoscall 調查 (2018)</p>
                 </div>
                 <div class="feature-pic">
-                    <img src="/HomeWork/Day2作業/whoscall網站圖片檔/asset 0.webp" alt="">
+                    <img src="/Day2HW-Whocall/whoscallimg/asset 0.webp" alt="">
                 </div>
             </div>
             <div class="feature-item">
@@ -374,7 +374,7 @@
                     <p>在來電記錄中，留下最佳企業形象，創造客戶主動聯繫的契機。</p>
                 </div>
                 <div class="feature-pic">
-                    <img src="/HomeWork/Day2作業/whoscall網站圖片檔/asset 1.webp" alt="">
+                    <img src="/Day2HW-Whocall/whoscallimg/asset 1.webp" alt="">
                 </div>
             </div>
             <div class="feature-item">
@@ -383,7 +383,7 @@
                     <p>不在客戶的通訊錄裡，也能於通話紀錄顯示企業資訊，輕鬆提升工作效率與拓客成功率。</p>
                 </div>
                 <div class="feature-pic">
-                    <img src="/HomeWork/Day2作業/whoscall網站圖片檔/asset 2.webp" alt="">
+                    <img src="/Day2HW-Whocall/whoscallimg/asset 2.webp" alt="">
                 </div>
             </div>
         </div>
@@ -394,7 +394,7 @@
             <div class="service-container">
                 <div class="service-item">
                     <div class="service-item-pic">
-                        <img src="/HomeWork/Day2作業/whoscall網站圖片檔/asset 3.svg" alt="">
+                        <img src="/Day2HW-Whocall/whoscallimg/asset 3.svg" alt="">
                     </div>
                     <div class="service-item-text">
                         <h4>實名認證</h4>
@@ -403,7 +403,7 @@
                 </div>
                 <div class="service-item">
                     <div class="service-item-pic">
-                        <img src="/HomeWork/Day2作業/whoscall網站圖片檔/asset 4.svg" alt="">
+                        <img src="/Day2HW-Whocall/whoscallimg/asset 4.svg" alt="">
                     </div>
                     <div class="service-item-text">
                         <h4>支援手機雙系統</h4>
@@ -412,7 +412,7 @@
                 </div>
                 <div class="service-item">
                     <div class="service-item-pic">
-                        <img src="/HomeWork/Day2作業/whoscall網站圖片檔/asset 5.svg" alt="">
+                        <img src="/Day2HW-Whocall/whoscallimg/asset 5.svg" alt="">
                     </div>
                     <div class="service-item-text">
                         <h4>一對一專人服務</h4>
@@ -427,33 +427,33 @@
             </div>
             <div class="customer-service-container">
                 <div class="customer-service-item">
-                    <img class="quote" src="/HomeWork/Day2作業/whoscall網站圖片檔/asset 9.svg" alt="">
+                    <img class="quote" src="/Day2HW-Whocall/whoscallimg/asset 9.svg" alt="">
                     <div class="customer-service-item-text">
                         <h3>沒想到更多客戶主動回<br>電</h3>
                         <p>申請Whoscall認證號碼後，業務撥打出去的未接來電，客戶更樂意回電了，保險方案的介紹與推動也比以前更即時有效!</p>
                     </div>
                     <div class="customer-service-item-pic">
-                        <img src="/HomeWork/Day2作業/whoscall網站圖片檔/國泰人壽.png" alt="">
+                        <img src="/Day2HW-Whocall/whoscallimg/國泰人壽.png" alt="">
                     </div>
                 </div>
                 <div class="customer-service-item">
-                    <img class="quote" src="/HomeWork/Day2作業/whoscall網站圖片檔/asset 9.svg" alt="">
+                    <img class="quote" src="/Day2HW-Whocall/whoscallimg/asset 9.svg" alt="">
                     <div class="customer-service-item-text">
                         <h3>高接聽率讓合作更有效<br>率</h3>
                         <p>設定Whoscall認證號碼後，電商客戶的接聽率明顯比以前高很多!和客戶討論案子的速度更順利、也更能即時給客戶完整的營運建議!</p>
                     </div>
                     <div class="customer-service-item-pic">
-                        <img src="/HomeWork/Day2作業/whoscall網站圖片檔/91APP.png" alt="">
+                        <img src="/Day2HW-Whocall/whoscallimg/91APP.png" alt="">
                     </div>
                 </div>
                 <div class="customer-service-item">
-                    <img class="quote" src="/HomeWork/Day2作業/whoscall網站圖片檔/asset 9.svg" alt="">
+                    <img class="quote" src="/Day2HW-Whocall/whoscallimg/asset 9.svg" alt="">
                     <div class="customer-service-item-text">
                         <h3>接聽意願提高，配送更快速!</h3>
                         <p>透過Whoscall Number服務，讓顧客接聽意願變高，也讓我們的物流司機更容易掌握顧客的狀況，網購商品能更及時且有效率的送達。</p>
                     </div>
                     <div class="customer-service-item-pic">
-                        <img src="/HomeWork/Day2作業/whoscall網站圖片檔/PCHOME.png" alt="">
+                        <img src="/Day2HW-Whocall/whoscallimg/PCHOME.png" alt="">
                     </div>
                 </div>
             </div>
