--- a/Day2HW-CourseTable/tableHW.html
+++ b/Day2HW-CourseTable/tableHW.html
@@ -9,6 +9,7 @@
         table{
             width: 800px;
             border: 4px solid #000;
+            margin: auto;
         }
         th{
             border: 1px solid #000;
@@ -18,6 +19,10 @@
         }
         td{
             border: 1px solid #000;
+        }
+        caption{
+            font-size: 24px;
+            font-weight: 700;
         }
         *{
             margin: 5px;
