--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     
 
-    <a href="/Day1HW-Starter/Day01-2.html">簡單排版</a>
+    <a href="/Day1HW-Starter/Day01.html">簡單排版</a>
     <a href="/Day2HW-CourseTable/tableHW.html">課表</a>
     <a href="/Day2HW-Whocall/whoscall.html">whoscall切版</a>
 
