--- a/Day2HW-Whocall/whoscall.html
+++ b/Day2HW-Whocall/whoscall.html
@@ -12,11 +12,19 @@
             list-style: none;
         }
         .navbar{
-            width: 70%;
+            width: 100%;
+            height: 80px;
             display: flex;
             margin: auto;
             align-items: center;
-            /* box-shadow: 10px 1px 1px #ccc; */
+            position: fixed;
+            top: 0;
+            z-index: 5;
+            background-color: #fff;
+            box-shadow: 10px 1px 1px #ccc;
+        }
+        .navbar .list{
+            width: 80%;
         }
         .navbar a{
             text-decoration: none;
@@ -30,10 +38,9 @@
             transition: .3s;
         }
         .navbar .download a{
-            margin-left: 200px;
             padding: 10px 25px;
             border-radius: 200px;
-            color: #000;
+            color: #fff;
             background-color: rgb(47, 239, 47);
         }
         .navbar .download a:hover{
@@ -247,7 +254,7 @@
         }
         .main-footer{
             width: 100%;
-            background-color: rgb(37, 36, 38);
+            background-color: #2c323f;
             margin: auto;
         }
         .footer-list{
@@ -329,6 +336,13 @@
         }
         .footer-info .language{
             align-self: flex-end;
+            
+        }
+        .footer-info select{
+            background-color: #2c323f;
+            border: none;
+            color: #fff;
+            font-size: 16px;
         }
     </style>
 </head>
