--- a/Day2HW-CourseTable/tableHW.html
+++ b/Day2HW-CourseTable/tableHW.html
@@ -25,8 +25,8 @@
             font-weight: 700;
         }
         *{
-            margin: 5px;
-            padding: 5px;
+            margin: 3px;
+            padding: 3px;
             text-align: center;
         }
     </style>
@@ -137,7 +137,7 @@
                 <td rowspan="2">自然</td>
                 <td rowspan="2">音樂</td>
                 <td rowspan="2">社會</td>
-                <td rowspan="2">社會(電腦)</td>
+                <td rowspan="2">社會<br>(電腦)</td>
                 <td rowspan="2">藝術與人文</td>
                 <td>音樂</td>
                 <td>40</td>
@@ -154,7 +154,7 @@
                 <td rowspan="2">11:20 12:00</td>
                 <td rowspan="2">健康</td>
                 <td rowspan="2">自然</td>
-                <td rowspan="2">彈性(數學)</td>
+                <td rowspan="2">彈性<br>(數學)</td>
                 <td rowspan="2">彈性</td>
                 <td rowspan="2">自然</td>
                 <td rowspan="2">健康與體育</td>
@@ -168,28 +168,30 @@
                 <td>潘文欽</td>
             </tr>
             <tr>
-                <td rowspan="8">下午</td>
+                <td rowspan="9">下午</td>
                 <td rowspan="2"></td>
                 <td rowspan="2">80</td>
                 <td>12:00 12:40</td>
                 <td colspan="5">午餐時間</td>
-                <td colspan="2" rowspan="2">綜合活動</td>
-                <td rowspan="2">120</td>
-                <td rowspan="2">劉晨華</td>
+                <td colspan="2" rowspan="3" height="110px">綜合活動</td>
+                <td rowspan="3">120</td>
+                <td rowspan="3">劉晨華</td>
             </tr>
             <tr>
                 <td>12:40 13:20</td>
                 <td colspan="5">午餐時間</td>
             </tr>
             <tr>
-                <td>5</td>
-                <td>40</td>
-                <td>13:30 14:10</td>
-                <td>美勞</td>
-                <td>國語</td>
-                <td rowspan="5">教師進修時間</td>
-                <td>綜合</td>
-                <td>國語</td>
+                <td rowspan="2">5</td>
+                <td rowspan="2">40</td>
+                <td rowspan="2">13:30 14:10</td>
+                <td rowspan="2">美勞</td>
+                <td rowspan="2">國語</td>
+                <td rowspan="6">教師<br>進修<br>時間</td>
+                <td rowspan="2">綜合</td>
+                <td rowspan="2">國語</td>
+            </tr>
+            <tr>
                 <td rowspan="2">彈性時間</td>
                 <td>彈性課程</td>
                 <td>160</td>
