--- a/Day2HW-Whocall/whoscall.html
+++ b/Day2HW-Whocall/whoscall.html
@@ -24,13 +24,15 @@
             box-shadow: 10px 1px 1px #ccc;
         }
         .navbar .list{
-            width: 80%;
+            width: 70%;
+            display: flex;
+            align-self: center;
         }
         .navbar a{
             text-decoration: none;
             color: #000;
             padding: 10px;
-            font-size: 10px;
+            font-size: 16px;
             font-weight: 700;
         }
         .navbar a:hover{
@@ -39,6 +41,7 @@
         }
         .navbar .download a{
             padding: 10px 25px;
+            margin-left: 100px;
             border-radius: 200px;
             color: #fff;
             background-color: rgb(47, 239, 47);
@@ -47,7 +50,7 @@
             background-color: rgb(48, 248, 48);
         }
         .navbar .logo{
-            width: 100px;
+            width: 150px;
             padding: 15px;
         }
         .navbar .logo img{
@@ -143,7 +146,7 @@
         }
         .feature-container .feature-text h3{
             color: rgb(47, 239, 47);
-            font-size: 24px;
+            font-size: 30px;
             font-weight: 700;
         }
         .feature-container .feature-text p{
@@ -282,9 +285,10 @@
         }
         .footer-container-item nav a{
             text-decoration: none;
-            color: rgba(99, 96, 96, 0.603);
+            color: #d5d5d5;
             font-size: 14px;
             padding: 5px 0;
+            font-weight: 700;
         }
         .footer-container-item nav a:hover{
             color: #fff;
@@ -309,7 +313,7 @@
         }
         .followus-path-icon a{
             text-decoration: none;
-            color: #ccc;
+            color: #d5d5d5;
             margin-right: 20px;
             font-size: 26px;
         }
@@ -323,13 +327,14 @@
             border-top: 1px solid #fff;
         }
         .footer-info .copyright{
-            color: rgba(99, 96, 96, 0.603);
+            color: #d5d5d5;
             padding-left: 20px;
         }
         .footer-info .copyright a{
             text-decoration: none;
             padding: 0 20px;
-            color: rgba(99, 96, 96, 0.603);
+            color: #d5d5d5;
+            font-weight: 700;
         }
         .footer-info .copyright a:hover{
             color: #fff;
@@ -337,6 +342,9 @@
         .footer-info .language{
             align-self: flex-end;
             
+        }
+        .footer-info .language a{
+            color: #fff;
         }
         .footer-info select{
             background-color: #2c323f;
@@ -546,6 +554,7 @@
                 <a href="#">隱私權政策</a>
             </div>
             <div class="language">
+                <a href="#"><i class="fa-solid fa-globe"></i></a></i>
                 <select name="language">
                     <option value="">English</option>
                     <option value="">中文</option>
