--- a/Day0-Practice/recreateindex.html
+++ b/Day0-Practice/recreateindex.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Recreateindex</title>
     <style>
         @import url(https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400;500;700;900&display=swap);
         *{
@@ -50,7 +50,7 @@
             width: 150px;
             height: 150px;
             background-color: #fff;
-            margin: -76px auto 0;
+            margin: -75px auto 0;
             font-size: 75px;
             line-height: 150px;
             border-radius: 50%;
@@ -123,8 +123,8 @@
             </div>
             <div class="list">
                 <ul>
-                    <li><a href="https://mullerchen0219.github.io/Day2HW-CourseTable/tableHW.html">Day2成功國小課表</a></li>
-                    <li><a href="https://mullerchen0219.github.io/Day2HW-Whocall/whoscall.html">Day2Whoscall切版</a></li>
+                    <li><a href="">Day2成功國小課表</a></li>
+                    <li><a href="">Day2Whoscall切版</a></li>
                     <li></li>
                     <li></li>
                     <li></li>
