--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <div class="list">
                 <ul>
                     <li><a href="">Day2成功國小課表</a></li>
-                    <li><a href="">Day2Whoscall切版</a></li>
+                    <li><a href="https://sky-rat-d3f.notion.site/Day2-Whoscall-60ccfddf850d45eebcdaaa77589bb662">Day2Whoscall切版</a></li>
                     <li></li>
                     <li></li>
                     <li></li>
