update table question

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             </div>
             <div class="list">
                 <ul>
-                    <li><a href="">Day2成功國小課表</a></li>
+                    <li><a href="https://sky-rat-d3f.notion.site/76f5502911774499827b51bed2bee96a">Day2成功國小課表</a></li>
                     <li><a href="https://sky-rat-d3f.notion.site/Day2-Whoscall-60ccfddf850d45eebcdaaa77589bb662">Day2Whoscall切版</a></li>
                     <li></li>
                     <li></li>
