--- a/Day2HW-Whocall/whoscall.html
+++ b/Day2HW-Whocall/whoscall.html
@@ -186,6 +186,7 @@
         }
         .feature-container .feature-pic img{
             width: 480px;
+            vertical-align: middle;
         }
         .service{
             width: 100%;
