--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             </div>
             <div class="list">
                 <ul>
-                    <li><a href="https://mullerchen0219.github.io/Day2HW-Whocall/whoscallVer2.0.html">Day2Whoscall切版</a></li>
+                    <li><a href="https://mullerchen0219.github.io/Day2HW-Whocall/whoscallVer2.0.html">Day2Whoscall切版2.0</a></li>
                     <li><a href=""></a></li>
                     <li><a href=""></a></li>
                     <li></li>
