--- a/Day4HW-TOYOTA/TOYOTA.html
+++ b/Day4HW-TOYOTA/TOYOTA.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TOYOTA HOMEWORK</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <style>
         @import url(https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400;500;700;900&display=swap);
         
@@ -39,13 +40,13 @@
         }
         .wrap:nth-child(even) .feature .feature-title{
             flex-direction: row-reverse;
-            justify-content: flex-start;
+            justify-content: space-evenly;
+        }
+        .feature .feature-title span{
+            font-size: 85px;
         }
         .feature .feature-title h2{
             font-size: 52px;
-        }
-        .feature .feature-title .mark{
-            font-size: 100px;
         }
         .feature-title-number{
             transform: rotate(90deg);
@@ -55,6 +56,7 @@
             align-items: center;
         }
         .feature-content{
+            background-image: url(/Day4HW-TOYOTA/dot.png);
             background-color: #000;
             color: #fff;
         }
@@ -71,14 +73,10 @@
             width: 680px;
             position: relative;
             padding-left: 200px;
-            padding-top: 145px;
+            padding-top: 123px;
             z-index: 2;
         }
         .wrap:nth-child(even) .main-pic{
-            width: 680px;
-            position: relative;
-            z-index: 2;
-            padding-top: 145px;
             padding-left: 0;
         }
         .main-pic img{
@@ -87,7 +85,7 @@
         }
         .main-pic .play{
             width: 42px;
-            height: 30px;
+            height: 28px;
             position: absolute;
             top: 340px;
             right: -8px;
@@ -110,8 +108,9 @@
             z-index: 1;
         }
         .wrap:nth-child(even) .gray{
+            height: 350px;
             right: 200px;
-            top: 180px;
+            top: 160px;
         }
         .revolution{
             width: 640px;
@@ -171,7 +170,7 @@
             <section class="feature">
                 <div class="feature-title">
                     <div class="feature-title-number">
-                        <h2 class="mark">01</h2>
+                        <span>01</span>
                     </div>
                     <div class="feature-title-text">
                         <h2>操控樂趣</h2>
@@ -216,7 +215,7 @@
             <section class="feature">
                 <div class="feature-title">
                     <div class="feature-title-number">
-                        <h2 class="mark">02</h2>
+                        <span>02</span>
                     </div>
                     <div class="feature-title-text">
                         <h2>安全守護</h2>
@@ -255,7 +254,7 @@
             <section class="feature">
                 <div class="feature-title">
                     <div class="feature-title-number">
-                        <h2 class="mark">03</h2>
+                        <span>03</span>
                     </div>
                     <div class="feature-title-text">
                         <h2>乘坐舒適</h2>
@@ -299,7 +298,7 @@
             <section class="feature">
                 <div class="feature-title">
                     <div class="feature-title-number">
-                        <h2 class="mark">04</h2>
+                        <span>04</span>
                     </div>
                     <div class="feature-title-text">
                         <h2>以人為本</h2>
@@ -340,7 +339,7 @@
             <section class="feature">
                 <div class="feature-title">
                     <div class="feature-title-number">
-                        <h2 class="mark">05</h2>
+                        <span>05</span>
                     </div>
                     <div class="feature-title-text">
                         <h2>引以為傲</h2>
