--- a/Day4HW-TOYOTA/TOYOTA.html
+++ b/Day4HW-TOYOTA/TOYOTA.html
@@ -138,7 +138,7 @@
         .revolution hr{
             display: inline-block;
             width: 420px;
-            height: 2px;
+            height: 1.5px;
             border: none;
             background-color: #bb0404;
             padding-left: 5px;
@@ -154,6 +154,9 @@
             background-color: #000;
             width: fit-content;
             font-weight: 500;
+        }
+        .revolution-text p{
+            color: #717171;
         }
         .revolution-text div{
             display: flex;
