--- a/Day4HW-TOYOTA/TOYOTA.html
+++ b/Day4HW-TOYOTA/TOYOTA.html
@@ -14,6 +14,7 @@
             padding: 0;
             list-style: none;
             font-family: 'Noto Sans TC', sans-serif;
+            scroll-behavior: smooth;
         }
         .main-header{
             width: 100%;
@@ -58,6 +59,7 @@
         .advantage-content{
             width: 960px;
             margin: auto;
+            padding-bottom: 50px;
         }
         .advantage-content-title{
             text-align: center;
@@ -78,22 +80,25 @@
         .advantage-content-item{
             display: flex;
             text-align: center;
+            justify-content: center;
         }
-        .advantage-content-item li{
-            width: 172px;
-            margin: 0 10px;
-            padding: 3px 0;
-            border-top: 1px dotted black;
-            border-left: 1px dotted black;
-            border-right: 1px dotted black;
-            border-bottom: 3px solid #bb0404;
+        .advantage-content-item li + li{
+            margin-left: 20px;
+        }
+
+        .advantage-content-item a{
+            font-size: 18px;
+            text-decoration: none;
+            color: #333;
+            border: 1px dotted #aaa;
+            padding: 5px 50px;
+            border-bottom: 2px solid #bb0404;
             position: relative;
-            transition: all 0.3s ease;
         }
-        .advantage-content-item li::before{
+        .advantage-content-item a::before{
             content: '';
             position: absolute;
-            background-color: #bb0404;
+            background: #bb0404;
             right: 0;
             left: 0;
             bottom: 0;
@@ -101,9 +106,9 @@
             transition: all 0.3s ease;
             z-index: -1;
         }
-        .advantage-content-item li a{
-            text-decoration: none;
-            color: #333;
+        .advantage-content-item a:hover::before{
+            content: '';
+            height: 100%;
         }
         .wrap{
             width: 960px;
@@ -117,6 +122,7 @@
             width: 350px;
             position: absolute;
             z-index: 3;
+            padding-top: 90px;
         }
         .wrap:nth-child(even) .feature{
             right: 0px;
@@ -318,16 +324,16 @@
                     <hr>
                 </div>
                 <ul class="advantage-content-item">
-                    <li><a href="#">操控樂趣</a></li>
-                    <li><a href="#">安全守護</a></li>
-                    <li><a href="#">乘坐舒適</a></li>
-                    <li><a href="#">以人為本</a></li>
-                    <li><a href="#">引以為傲</a></li>
+                    <li><a href="#drive">操控樂趣</a></li>
+                    <li><a href="#safety">安全守護</a></li>
+                    <li><a href="#comfortable">乘坐舒適</a></li>
+                    <li><a href="#humility">以人為本</a></li>
+                    <li><a href="#proud">引以為傲</a></li>
                 </ul>
             </div>
         </section>
-        <section class="wrap">
-            <section class="feature">
+        <div class="wrap">
+            <section id="drive" class="feature">
                 <div class="feature-title">
                     <div class="feature-title-number">
                         <span>01</span>
@@ -343,12 +349,12 @@
                 </div>
             </section>
             <div class="gray"></div>
-            <section class="main-pic">
+            <div class="main-pic">
                 <img src="/Day4HW-TOYOTA/toyota1.jpg" alt="">
                 <div class="play">
                     <img src="/Day4HW-TOYOTA/play.png" alt="">
                 </div>
-            </section>
+            </div>
             <section class="revolution">
                 <div class="design"><span>因為我們做了這些革新</span><hr>
                 </div>
@@ -370,9 +376,9 @@
                     </div>
                 </div>
             </section>
-        </section>
-        <section class="wrap">
-            <section class="feature">
+        </div>
+        <div class="wrap">
+            <section id="safety" class="feature">
                 <div class="feature-title">
                     <div class="feature-title-number">
                         <span>02</span>
@@ -387,12 +393,12 @@
                 </div>
             </section>
             <div class="gray"></div>
-            <section class="main-pic">
+            <div class="main-pic">
                 <img src="/Day4HW-TOYOTA/toyota2.jpg" alt="">
                 <div class="play">
                     <img src="/Day4HW-TOYOTA/play.png" alt="">
                 </div>
-            </section>
+            </div>
             <section class="revolution">
                 <div class="design"><span>因為我們做了這些革新</span><hr>
                 </div>
@@ -409,9 +415,9 @@
                     </div>
                 </div>
             </section>
-        </section>
-        <section class="wrap">
-            <section class="feature">
+        </div>
+        <div class="wrap">
+            <section id="comfortable" class="feature">
                 <div class="feature-title">
                     <div class="feature-title-number">
                         <span>03</span>
@@ -426,12 +432,12 @@
                 </div>
             </section>
             <div class="gray"></div>
-            <section class="main-pic">
+            <div class="main-pic">
                 <img src="/Day4HW-TOYOTA/toyota3.jpg" alt="">
                 <div class="play">
                     <img src="/Day4HW-TOYOTA/play.png" alt="">
                 </div>
-            </section>
+            </div>
             <section class="revolution">
                 <div class="design"><span>因為我們做了這些革新</span><hr>
                 </div>
@@ -453,9 +459,9 @@
                     </div>
                 </div>
             </section>
-        </section>
-        <section class="wrap">
-            <section class="feature">
+        </div>
+        <div class="wrap">
+            <section id="humility" class="feature">
                 <div class="feature-title">
                     <div class="feature-title-number">
                         <span>04</span>
@@ -472,12 +478,12 @@
                 </div>
             </section>
             <div class="gray"></div>
-            <section class="main-pic">
+            <div class="main-pic">
                 <img src="/Day4HW-TOYOTA/toyota4.jpg" alt="">
                 <div class="play">
                     <img src="/Day4HW-TOYOTA/play.png" alt="">
                 </div>
-            </section>
+            </div>
             <section class="revolution">
                 <div class="design"><span>因為我們做了這些革新</span><hr>
                 </div>
@@ -494,9 +500,9 @@
                     </div>
                 </div>
             </section>
-        </section>
-        <section class="wrap">
-            <section class="feature">
+        </div>
+        <div class="wrap">
+            <section id="proud" class="feature">
                 <div class="feature-title">
                     <div class="feature-title-number">
                         <span>05</span>
@@ -511,12 +517,12 @@
                 </div>
             </section>
             <div class="gray"></div>
-            <section class="main-pic">
+            <div class="main-pic">
                 <img src="/Day4HW-TOYOTA/toyota5.jpg" alt="">
                 <div class="play">
                     <img src="/Day4HW-TOYOTA/play.png" alt="">
                 </div>
-            </section>
+            </div>
             <section class="revolution">
                 <div class="design"><span>因為我們做了這些革新</span><hr>
                 </div>
@@ -533,7 +539,7 @@
                     </div>
                 </div>
             </section>
-        </section>
+        </div>
     </main>
     <footer class="main-footer">
         <div class="footer-content">
