--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
             <div class="list">
                 <ul>
                     <li><a href="https://sky-rat-d3f.notion.site/76f5502911774499827b51bed2bee96a">Day2成功國小課表</a></li>
-                    <li><a href="https://mullerchen0219.github.io/Day2HW-Whocall/whoscall.html">Day2Whoscall切版</a></li>
-                    <li><a href="https://mullerchen0219.github.io/Day2HW-Whocall/whoscall.html">Day4TOYOTA切版</a></li>
+                    <li><a href="https://sky-rat-d3f.notion.site/Day2-Whoscall-60ccfddf850d45eebcdaaa77589bb662">Day2Whoscall切版</a></li>
+                    <li><a href="https://sky-rat-d3f.notion.site/Day4-TOYOTA-343a22605eb9424c955069d93ec85641">Day4TOYOTA切版</a></li>
                     <li></li>
                     <li></li>
                 </ul>
