--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <li><a href="https://mullerchen0219.github.io/Day2HW-Whocall/whoscall.html">Day2Whoscall切版</a></li>
                     <li><a href="https://mullerchen0219.github.io/Day4HW-TOYOTA/TOYOTA.html">Day4TOYOTA切版</a></li>
                     <li><a href="https://mullerchen0219.github.io/Day5HW-RWD_Intro/RWD_Intro.html">Day5RWD試排</a></li>
-                    <li></li>
+                    <li><a href="https://mullerchen0219.github.io/Day6HW-RWD-Menu/RWD-Menu.html">Day6RWD-Menu(CSS版)</a></li>
                 </ul>
             </div>
         </div>
