RWD-Menu-2 JQuery

--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
                     <li><a href="https://mullerchen0219.github.io/Day4HW-TOYOTA/TOYOTA.html">Day4TOYOTA切版</a></li>
                     <li><a href="https://mullerchen0219.github.io/Day5HW-RWD_Intro/RWD_Intro.html">Day5RWD試排</a></li>
                     <li><a href="https://mullerchen0219.github.io/Day6HW-RWD-Menu/RWD-Menu.html">Day6RWD-Menu(CSS版)</a></li>
+                    <li><a href="https://mullerchen0219.github.io/Day6HW-RWD-Menu/RWD-Menu-2.html">Day6RWD-Menu(JQuery版)</a></li>
                 </ul>
             </div>
         </div>
