fix hover issue

--- a/Day6HW-RWD-Menu/RWD-Menu-2.html
+++ b/Day6HW-RWD-Menu/RWD-Menu-2.html
@@ -91,7 +91,7 @@
                             <i class="fa-solid fa-chevron-down"></i>
                         </div>
                         <ul class="drop-list">
-                            <li>
+                            <li class="drop-list-control">
                                 <a href="#">2022/2023英超</a>
                             </li>
                             <li>
@@ -100,7 +100,7 @@
                             <li>
                                 <a href="#">2022/2023德甲</a>
                             </li>
-                            <li >
+                            <li>
                                 <a href="#">2022/2023義甲</a>
                             </li>
                             <li>
