fix-color-change-issue

--- a/JSHW-TOYOTA_Altis3D/3DAltisHW.html
+++ b/JSHW-TOYOTA_Altis3D/3DAltisHW.html
@@ -68,6 +68,7 @@
             border-radius: 50%;
             border: 3.5px solid #fff;
             margin: 15px;
+            cursor: pointer;
         }
         #blueGray{
             background-color: #75879D;
@@ -147,6 +148,8 @@
                 carSrc = `https://hotaicdn.azureedge.net/toyotaweb/360EXT_1_18_${i}.png`;
                 carArray.push(carSrc);
             }
+            img.setAttribute("src", carArray[index]);
+
         })
 
         _black.addEventListener('click', function () {
@@ -155,6 +158,7 @@
                 carSrc = `https://hotaicdn.azureedge.net/toyotaweb/360EXT_1_19_${i}.png`;
                 carArray.push(carSrc);
             }
+            img.setAttribute("src", carArray[index]);
         })
 
         _riverGray.addEventListener('click', function () {
@@ -163,6 +167,7 @@
                 carSrc = `https://hotaicdn.azureedge.net/toyotaweb/360EXT_1_20_${i}.png`;
                 carArray.push(carSrc);
             }
+            img.setAttribute("src", carArray[index]);
         })
 
         _red.addEventListener('click', function () {
@@ -171,6 +176,7 @@
                 carSrc = `https://hotaicdn.azureedge.net/toyotaweb/360EXT_1_22_${i}.png`;
                 carArray.push(carSrc);
             }
+            img.setAttribute("src", carArray[index]);
         })
 
         _white.addEventListener('click', function () {
@@ -179,6 +185,7 @@
                 carSrc = `https://hotaicdn.azureedge.net/toyotaweb/360EXT_1_23_${i}.png`;
                 carArray.push(carSrc);
             }
+            img.setAttribute("src", carArray[index]);
         })
 
         _silver.addEventListener('click', function () {
@@ -187,6 +194,7 @@
                 carSrc = `https://hotaicdn.azureedge.net/toyotaweb/360EXT_1_21_${i}.png`;
                 carArray.push(carSrc);
             }
+            img.setAttribute("src", carArray[index]);
         })
         
 
