delete-container-img-tag

--- a/JSHW-TOYOTA_Altis3D/3DAltisHW-Advanced.html
+++ b/JSHW-TOYOTA_Altis3D/3DAltisHW-Advanced.html
@@ -13,7 +13,7 @@
     <h1>3D Altis HW</h1>
     <div class="wrap">
         <button id="counterClockWise"><i class="fa-solid fa-backward"></i></button>
-        <div id="container"><img src="" alt=""></div>
+        <div id="container"></div>
         <button id="clockWise"><i class="fa-solid fa-forward"></i></button>
     </div>
 
