--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                     <li><a href="https://sky-rat-d3f.notion.site/76f5502911774499827b51bed2bee96a">Day2成功國小課表</a></li>
                     <li><a href="https://sky-rat-d3f.notion.site/Day2-Whoscall-60ccfddf850d45eebcdaaa77589bb662">Day2Whoscall切版</a></li>
                     <li><a href="https://sky-rat-d3f.notion.site/Day4-TOYOTA-343a22605eb9424c955069d93ec85641">Day4TOYOTA切版</a></li>
-                    <li><a href="https://sky-rat-d3f.notion.site/Day6-RWD-Menu-bb367781e397439fa4f758d4107a55c8"></a>Day6RWD-Menu切版</li>
+                    <li><a href="https://sky-rat-d3f.notion.site/Day6-RWD-Menu-bb367781e397439fa4f758d4107a55c8">Day6RWD-Menu切版</a></li>
                     <li></li>
                 </ul>
             </div>
