upload-MAIKON-firstTime

--- a/index.html
+++ b/index.html
@@ -112,6 +112,8 @@
                     <li><a href="https://mullerchen0219.github.io/Day5HW-RWD_Intro/RWD_Intro.html">Day5RWD試排</a></li>
                     <li><a href="https://mullerchen0219.github.io/Day6HW-RWD-Menu/RWD-Menu.html">Day6RWD-Menu(CSS版)</a></li>
                     <li><a href="https://mullerchen0219.github.io/Day6HW-RWD-Menu/RWD-Menu-2.html">Day6RWD-Menu(JQuery版)</a></li>
+                    <li><a href="https://mullerchen0219.github.io/Day7HW-RWD-Maikon/Maikon.html">Day7RWD-MAIKON</a></li>
+                    <li><a href="">Day7RWD-Whoscall</a></li>
                 </ul>
             </div>
         </div>
