--- a/Day7HW-RWD-Whoscall-ByBootStrap/Whoscall.html
+++ b/Day7HW-RWD-Whoscall-ByBootStrap/Whoscall.html
@@ -62,7 +62,7 @@
         <section class="section-function mt-5">
             <div class="function-container">
                 <div class="row">
-                    <div class="col-12 col-lg-12 col-xl-12 d-flex flex-column align-items-center ">
+                    <div class="col-12 col-md-12 col-lg-12 col-xl-12 d-flex flex-column align-items-center ">
                         <div class="function-title">
                             <h2>強化通訊防護力，進階功能一次享有</h2>
                         </div>
@@ -79,10 +79,10 @@
             </div>
             <div class="function-container">
                 <div class="row mt-5 justify-content-center align-items-center">
-                    <div class="col-12 col-lg-5 col-xl-5 ">
+                    <div class="col-12 col-md-5 col-lg-5 col-xl-5 ">
                         <div class="function-pic"><img src="/Day7HW-RWD-Whoscall-ByBootStrap/whoscall/IOS1.png" alt=""></div>
                     </div>
-                    <div class="col-12 col-lg-5 col-xl-5 mx-2">
+                    <div class="col-12 col-md-5 col-lg-5 col-xl-5 mx-2">
                         <div class="function-feature">
                             <h3>自動封鎖騷擾號碼</h3>
                             <p>掛不斷的騷擾電話交給 Whoscall 幫你阻擋，<span class="green">把時間留給重要的人</span></p>
@@ -109,10 +109,10 @@
                     </div>
                 </div>
                 <div class="row justify-content-center align-items-center">
-                    <div class="col-12 col-lg-5 col-xl-5 ">
+                    <div class="col-12 col-md-5 col-lg-5 col-xl-5 ">
                         <div class="function-pic"><img src="/Day7HW-RWD-Whoscall-ByBootStrap/whoscall/IOS2.png" alt=""></div>
                     </div>
-                    <div class="col-12 col-lg-5 col-xl-5 ">
+                    <div class="col-12 col-md-5 col-lg-5 col-xl-5 ">
                         <div class="function-feature">
                             <h3>自動更新號碼資料庫</h3>
                             <p>詐騙電話隨時在變，定期更新掌握資訊，<span class="green">常保高效辨識率</span></p>
@@ -139,10 +139,10 @@
                     </div>
                 </div>
                 <div class="row justify-content-center align-items-center">
-                    <div class="col-12 col-lg-5 col-xl-5 ">
+                    <div class="col-12 col-md-5 col-lg-5 col-xl-5 ">
                         <div class="function-pic"><img src="/Day7HW-RWD-Whoscall-ByBootStrap/whoscall/IOS3.png" alt=""></div>
                     </div>
-                    <div class="col-12 col-lg-5 col-xl-5 mx-2 ">
+                    <div class="col-12 col-md-5 col-lg-5 col-xl-5 mx-2 ">
                         <div class="function-feature">
                             <h3>智慧簡訊管家</h3>
                             <p>再也不用問「這個簡訊可以點嗎？」，<span class="green">釣魚簡訊釣不到你</span></p>
@@ -169,10 +169,10 @@
                     </div>
                 </div>
                 <div class="row justify-content-center align-items-center">
-                    <div class="col-12 col-lg-5 col-xl-5 ">
+                    <div class="col-12 col-md-5 col-lg-5 col-xl-5 ">
                         <div class="function-pic"><img src="/Day7HW-RWD-Whoscall-ByBootStrap/whoscall/IOS4.png" alt=""></div>
                     </div>
-                    <div class="col-12 col-lg-5 col-xl-5 ">
+                    <div class="col-12 col-md-5 col-lg-5 col-xl-5 ">
                         <div class="function-feature">
                             <h3>移除廣告</h3>
                             <p>和廣告說掰掰，清爽介面，<span class="green">使用更順暢</span></p>
@@ -202,10 +202,10 @@
         <section class="section-advanced">
             <div class="container-lg">
                 <div class="advanced-title text-center m-5">
-                    <h3 class="p-5">進階版方案比較</h3>
+                    <h3 class="p-5 pb-3">進階版方案比較</h3>
                 </div>
                 <div class="card-group g-2 row mb-5 justify-content-center">
-                    <div class="col-12 col-lg-3 col-xl-3 ">
+                    <div class="col-12 col-md-3 col-lg-3 col-xl-3 ">
                         <div class="card-head bg-white p-4">
                             <div class="price-type">
                                 <p class="mb-0">免費版</p>
@@ -250,13 +250,13 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-lg-3 col-xl-3 ">
+                    <div class="col-12 col-md-3 col-lg-3 col-xl-3 ">
                         <div class="card-head bg-white p-4">
                             <div class="price-type">
                                 <p class="mb-0">進階版 - 月方案</p>
                             </div>
                             <div class="price-version">
-                                <p class="fs-4">Premium</p>
+                                <p class="green fs-4">Premium</p>
                             </div>
                             <div class="price">
                                 <p class="fs-3">NT$ 60<span class="fs-5">/月</span></p>
@@ -296,13 +296,13 @@
                             <button type="button" class="btn btn-success w-75 rounded-pill">立即免費試用</button>
                         </div>
                     </div>
-                    <div class="col-12 col-lg-3 col-xl-3 ">
+                    <div class="col-12 col-md-3 col-lg-3 col-xl-3 ">
                         <div class="card-head bg-white p-4">
                             <div class="price-type">
                                 <p class="mb-0">進階版 - 年方案</p>
                             </div>
                             <div class="price-version">
-                                <p class="fs-4">Premium</p>
+                                <p class="green fs-4">Premium</p>
                             </div>
                             <div class="price">
                                 <p class="position-relative fs-3">NT$ 600<span class="fs-5">/年</span></p>
@@ -310,6 +310,9 @@
                             <div class="price-deco d-flex position-absolute">
                                 <img src="/Day7HW-RWD-Whoscall-ByBootStrap/whoscall/coin-3ffc8bfd93e83fa0612deb213f216a6f.png" alt="coin">
                                 <span class="skew">一年最多省 NT$ 120 元</span>
+                            </div>
+                            <div class="card-head-deco">
+                                <p>最熱門方案</p>
                             </div>
                         </div>
                         <div class="card-body bg-white">
@@ -352,13 +355,21 @@
         <section class="section-question">
             <div class="container-lg">
                 <div class="row justify-content-center pt-5">
-                    <div class="col-12 col-lg-9 col-xl-9">
+                    <div class="col-12 col-md-9 col-lg-9 col-xl-9">
                         <div class="accordion" id="accordionExample">
                             <div class="accordion-item">
                                 <h2 class="accordion-header" id="headingOne">
-                                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                        Q. 進階版是否有試用期？是否會自動續訂？
-                                    </button>
+                                    <div class="d-flex justify-content-between">
+                                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                            Q. 進階版是否有試用期？是否會自動續訂？
+                                        </button>
+                                        <div>
+                                            <button class="QA-btn accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                                <i class="fa-solid fa-plus"></i>
+                                                <i class="fa-solid fa-minus"></i>
+                                            </button>
+                                        </div>
+                                    </div>
                                 </h2>
                                 <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                                     <div class="accordion-body">
@@ -368,9 +379,17 @@
                             </div>
                             <div class="accordion-item">
                                 <h2 class="accordion-header" id="headingTwo">
-                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                        Q. 我只想要試用，為什麼被收費了？
-                                    </button>
+                                    <div class="d-flex justify-content-between">
+                                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                            Q. 我只想要試用，為什麼被收費了？
+                                        </button>
+                                        <div>
+                                            <button class="QA-btn accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
+                                                <i class="fa-solid fa-plus"></i>
+                                                <i class="fa-solid fa-minus"></i>
+                                            </button>
+                                        </div>
+                                    </div>
                                 </h2>
                                 <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
@@ -379,9 +398,17 @@
                             </div>
                             <div class="accordion-item">
                                 <h2 class="accordion-header" id="headingThree">
-                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                        Q. 使用自動封鎖騷擾號碼功能後，就不會接到騷擾號碼了嗎？
-                                    </button>
+                                    <div class="d-flex justify-content-between">
+                                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                            Q. 使用自動封鎖騷擾號碼功能後，就不會接到騷擾號碼了嗎？
+                                        </button>
+                                        <div>
+                                            <button class="QA-btn accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
+                                                <i class="fa-solid fa-plus"></i>
+                                                <i class="fa-solid fa-minus"></i>
+                                            </button>
+                                        </div>
+                                    </div>
                                 </h2>
                                 <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                                     <div class="accordion-body">
@@ -391,9 +418,17 @@
                             </div>
                             <div class="accordion-item">
                                 <h2 class="accordion-header" id="headingFour">
-                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                                        Q.請問進階版可以跨系統/裝置使用嗎？例如我原先使用 iPhone，想改使用 Android 系統。
-                                    </button>
+                                    <div class="d-flex justify-content-between">
+                                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                                            Q.請問進階版可以跨系統/裝置使用嗎？例如我原先使用 iPhone，想改使用 Android 系統。
+                                        </button>
+                                        <div>
+                                            <button class="QA-btn accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="true" aria-controls="collapseFour">
+                                                <i class="fa-solid fa-plus"></i>
+                                                <i class="fa-solid fa-minus"></i>
+                                            </button>
+                                        </div>
+                                    </div>
                                 </h2>
                                 <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
                                     <div class="accordion-body">
@@ -403,9 +438,17 @@
                             </div>
                             <div class="accordion-item">
                                 <h2 class="accordion-header" id="headingFive">
-                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-                                        Q. Whoscall 進階版團購組合的序號可於何處進行兌換？
-                                    </button>
+                                    <div class="d-flex justify-content-between">
+                                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+                                            Q. Whoscall 進階版團購組合的序號可於何處進行兌換？
+                                        </button>
+                                        <div>
+                                            <button class="QA-btn accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="true" aria-controls="collapseFive">
+                                                <i class="fa-solid fa-plus"></i>
+                                                <i class="fa-solid fa-minus"></i>
+                                            </button>
+                                        </div>
+                                    </div>
                                 </h2>
                                 <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
                                     <div class="accordion-body">
@@ -421,12 +464,12 @@
         <section class="section-download">
             <div class="download-container">
                 <div class="row justify-content-center align-items-center">
-                    <div class="col-12 col-lg-2 col-xl-2">
+                    <div class="col-12 col-md-2 col-lg-2 col-xl-2">
                         <div class="main-icon">
                             <img src="/Day7HW-RWD-Whoscall-ByBootStrap/whoscall/download-app-icon.svg" alt="download">
                         </div>
                     </div>
-                    <div class="col-12 col-lg-3 col-xl-3">
+                    <div class="col-9 col-md-3 col-lg-3 col-xl-3">
                         <div class="app-title text-left">
                             <p>Download Now</p>
                             <span>你的陌生來電辨識 APP</span>
@@ -444,7 +487,7 @@
     <footer class="main-footer">
         <div class="container-footer-content">
             <div class="row justify-content-evenly">
-                <div class="col-12 col-lg-3 col-xl-2">
+                <div class="col-12 col-md-2 col-lg-2 col-xl-2">
                     <div class="link">
                         <p class="mb-0">Whoscall</p>
                         <ul class="link-list ">
@@ -463,7 +506,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-12 col-lg-3 col-xl-2">
+                <div class="col-12 col-md-2 col-lg-2 col-xl-2">
                     <div class="link">
                         <p class="mb-0">公司</p>
                         <ul class="link-list mb-0">
@@ -482,7 +525,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-12 col-lg-3 col-xl-2">
+                <div class="col-12 col-md-2 col-lg-2 col-xl-2">
                     <div class="link">
                         <p class="mb-0">客戶服務</p>
                         <ul class="link-list">
@@ -498,7 +541,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-12 col-lg-2 col-xl-2">
+                <div class="col-12 col-md-2 col-lg-2 col-xl-2">
                     <div class="footer-social">
                         <div class="follow-us">
                             <p>追蹤我們</p>
@@ -518,14 +561,14 @@
         </div>
         <div class="container">
             <div class="footer-copyright row justify-content-between mx-3">
-                <div class="col-12 col-lg-5 col-xl-5">
+                <div class="col-12 col-md-7 col-lg-5 col-xl-5">
                     <div class="text">
                         <p>© 2022 Gogolook. All Rights Reserved.</p>
                         <a href="#">服務條款</a>
                         <a href="#">隱私權政策</a>
                     </div>
                 </div>
-                <div class="col-12 col-lg-2 col-xl-2">
+                <div class="col-12 col-md-3 col-lg-2 col-xl-2">
                     <div class="language">
                         <a href="#"><i class="fa-solid fa-globe"></i></a></i>
                         <select name="language" >
